--- a/static/character_script.html
+++ b/static/character_script.html
@@ -5,6 +5,9 @@
     <title>{{.Name}}</title>
 </head>
 <body>
-{{.Description}}
+
+<span style="color: #cd5c5c; font-size:15px "> {{.Script}}</span>
+<br>
+<img id="img" src="static/img/script.jfif">
 </body>
 </html>
