--- a/static/home.html
+++ b/static/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>天空之城谋杀案</title>
+<title>{{.Name}}</title>
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -9,19 +9,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 
-    function changeContent(name) {
+    function changeContent(name,arg) {
         switch (name) {
             case "mainPage":
-                document.getElementById("content").setAttribute("src","static/index.html");
+                document.getElementById("content").setAttribute("src","mainPage"+document.location.search);
                 break;
             case "script":
-                document.getElementById("content").setAttribute("src","static/script.html");
+                document.getElementById("content").setAttribute("src","characterScript"+document.location.search);
                 break;
-            case "job":
-                document.getElementById("content").setAttribute("src","static/job.html");
+            case "task":
+                document.getElementById("content").setAttribute("src","task"+document.location.search);
                 break;
             case "scene":
-                document.getElementById("content").setAttribute("src","static/scene.html");
+                document.getElementById("content").setAttribute("src","scene?arg="+arg);
                 break;
             default:
                 document.getElementById("content").setAttribute("src","static/index.html");
@@ -74,6 +74,7 @@
         appendLog(item);
     }
 
+    document.getElementById("content").setAttribute("src","mainPage"+document.location.search);
 };
 </script>
 
@@ -184,19 +185,15 @@ body {
             <div class="collapse navbar-collapse" id="example-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a name="script" href="#" onclick="changeContent(name)">人物剧本</a></li>
-                    <li><a name="job" href="#" onclick="changeContent(name)">你的任务</a></li>
+                    <li><a name="task" href="#" onclick="changeContent(name)">你的任务</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             案发现场 <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a name="scene" href="#" onclick="changeContent(name)">卧室</a></li>
-                            <li><a name="scene" href="#" onclick="changeContent(name)">厨房</a></li>
-                            <li><a name="scene" href="#" onclick="changeContent(name)">走廊</a></li>
-                            <li class="divider"></li>
-                            <li><a name="scene" href="#" onclick="changeContent(name)">花园</a></li>
-                            <li class="divider"></li>
-                            <li><a name="scene" href="#" onclick="changeContent(name)">城墙</a></li>
+                            {{ range .Scenes }}
+                            <li><a name="scene" href="#" onclick="changeContent(name,{{.Name}})">{{.Name}}</a></li>
+                            {{ end }}
                         </ul>
                     </li>
                 </ul>
@@ -205,7 +202,7 @@ body {
     </nav>
     </div>
     <div id="gameContent">
-        <iframe frameborder="0" width="100%" height="100%" scrolling="yes" src="static/index.html" id="content"></iframe>
+        <iframe frameborder="0" width="100%" height="100%" scrolling="yes" src="" id="content"></iframe>
     </div>
 </div>
 
