--- a/static/main_page.html
+++ b/static/main_page.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>job</title>
+    <title>Title</title>
 </head>
 <body>
-job
+{{.Description}}
 </body>
 </html>
